# peg-parser

./: . gitattributes  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  Taskfile.ply.yml  Taskfile.yml  asv.conf.json  bench-lexer.md  conftest.py  debug_tokens.py  experiments.md  index.html  mkdocs.yml  plot_benchmarks.py  pyproject.toml  pyrightconfig.json  setup.py  todo.md  todos.md
.asv/results/: benchmarks.json
.asv/results/Noortheens-MacBook-Air.local/: 2cadb710-virtualenv-py3.12.json  34a01df7-virtualenv-py3.9.json  5507cbc9-virtualenv-py3.9.json  7e189079-virtualenv-py3.9.json  c13e0f0c-virtualenv-py3.9.json  f772d735-virtualenv-py3.12.json  machine.json
.github/workflows/: build.yml
benchmarks/: benchmarks.py  trace_and_time.py
crates/ser-parser/: Cargo.toml  pyproject.toml
crates/ser-parser/src/: lexer.rs  lib.rs
crates/ser_rs/: Cargo.toml  README.md  pyproject.toml
crates/ser_rs/src/: lib.rs  parser.rs  range.rs  result.rs  set.rs
crates/ser_rs/tests/: test_cut.rs
crates/winnow-parser/: Cargo.toml  pyproject.toml  test_parser_atoms.py  test_parser_statements.py  test_tok.py
crates/winnow-parser/src/: lib.rs  main.rs  tokenizer.rs
crates/winnow-parser/src/parser/: atoms.rs  expressions.rs  mod.rs  statements.rs
crates/winnow-parser/tests/: conftest.py  test_ast_parsing.py  test_call_macros.py  test_invalid.py  test_lexer.py  test_parser.py  test_subproc_macros.py
crates/winnow-parser/tests/data/: fstring_py312.py  fstrings.py  statements.xsh
crates/winnow-parser/tests/data/exprs/: bg.py  combinators.py  globs.py  help.py  redirects.py
crates/xtokens/: Cargo.toml  pyproject.toml
crates/xtokens/src/: lib.rs  tok_info.rs  token.rs
dev/bench/: data.js
docs/reference/: xonsh_parser.md
peg_parser/: .gitignore  Justfile  parser.pxd  parser.py  subheader.pxd  subheader.py  token.py  tokenize.pxd  tokenize.py  tokenizer.pxd  tokenizer.py
peg_parser/parser/: .gitignore  subheader.py  token.py  tokenize.py  tokenizer.py  trailer.py  untokenizer.py  xonsh.gram
peg_parser/tasks/: bench_utils.py  generate_parser.py  profile_mem.py
peg_parser/tests/: conftest.py  test_ast_parsing.py  test_lexer.py  test_parser.py  test_syntax_error_handling.py  test_unsupported_syntax.py
peg_parser/tests/data/: expressions.py
pegen/: grammar_parser.py  metagrammar.gram  py_parser.py  python_generator.py  tokenizer.py
pegen/templates/: index.html
ply_parser/: __init__.py  execer.py  lazyasd.py  lexer.py  parser.py  tokenize.py  tokenize_rt.py  xast.py
ply_parser/parsers/: base.py  completion_context.py  context_check.py  fstring_adaptor.py  preprocessor.py  v310.py  v36.py  v38.py  v39.py
ply_parser/ply/: common.py  lrparser.py  write_utils.py  yacc.py
ply_parser/tests/: conftest.py  sample.py  test_ast.py  test_lexer.py  test_parser.py  test_parser_310.py  test_parser_basic.py  test_preprocessor.py  test_xsh_syntax.py  tools.py  yaml_snaps.py
ply_parser/tests/__snapshots__/: test_xsh_syntax.ambr
ply_parser/tests/data/: exprs.yml  fstrings.3_12.py  stmts.yml
rs-ply/: Cargo.toml  pyproject.toml
rs-ply/src/: data.rs  lib.rs  lrparser.rs  yacc_types.rs
scripts/: tree.py
src/: main.rs  montyc_tok.rs  tokenizer.rs
tasks/: .gitignore  bench_utils.py  generate_parser.py  generator.py  profile_mem.py  simple.py  xonsh.gram
tests/: bench_lexer.py  benchmarks.py  conftest.py  manual_test_parser.py  sample.py  test_add.py  test_ast.py  test_ast_parsing.py  test_bench.py  test_call_macros.py  test_fstring.py  test_invalid.py  test_lexer.py  test_macros.py  test_parser.py  test_parser_38.py  test_parser_basic.py  test_preprocessor.py  test_redirects.py  test_subproc_macros.py  test_syntax_error_handling.py  test_unsupported_syntax.py  test_winnow_lexer.py  test_with_macros.py  test_xonsh_tokenizer.py  tools.py
tests/data/: assignment.py  fstrings.py  type_params.py  x-statements.py
tests/data/exprs/: combinators.py  env.py  globs.py  path-literals.py  proc_injection.py  str_literals.py  subproc.py  writes.py
tests/data/stmts/: assignments.py
winnow-parser/: Cargo.toml  manual_test_parser.py  pyproject.toml  test_parser_expressions.py  test_unicode.py
winnow-parser/src/: lib.rs  parser.rs  subheader.rs  tokenizer.rs
winnow-parser/src/parser/: atoms.rs  expr_ops.rs  lambdas.rs  main.rs  mod.rs
winnow-parser/tests/: conftest.py  test_fstring.py  test_syntax_error_handling.py
winnow-parser/tests/data/: expressions.py  try_except_group.py
winnow-parser/tests/data/exprs/: path-literals.py  subproc.py
xonsh_parser/: __init__.py  execer.py  lazyasd.py  lexer.py  parser.py  platform.py  tokenize.py  tokenize_rt.py  tools.py  xast.py
xonsh_parser/parsers/: base.py  completion_context.py  fstring_adaptor.py  preprocessor.py  v310.py  v36.py  v38.py
xonsh_parser/ply/: common.py  lrparser.py  save_table.py  yacc.py
xonsh_parser/tests/: sample.py  test_lexer.py  test_parser.py  test_preprocessor.py  tools.py
xonsh_parser/tests/line-items/: env.py  fstring.py  pstring.py  subproc.py
xonsh_tokenizer/: Cargo.toml  pyproject.toml  xonsh_tokenizer.pyi
xonsh_tokenizer/src/: lib.rs  regex.rs  tokenizer.rs
xonsh_tokenizer/src/regex/: consts.rs  fns.rs  mod.rs
xonsh_tokenizer/src/tokenizer/: end_prog.rs  line_state.rs  main.rs  mod.rs  result.rs  state.rs  tok.rs
