[package]
name = "xonsh-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = { git = "https://github.com/maciejhirsz/logos", version = "0.13.0" }
rustpython-parser = "0.2.0"
sysinfo = "0.29.0"
