[tool.ruff]
line-length = 110
extend-exclude = ["tests/line-items", "peg_parser/tests/data", "pegen"]

[tool.ruff.lint]
extend-select = ["B", "I", "UP"]
fixable = ["ALL"]

# ruff ignore file "xonsh_parser/ply/yacc.py"
[tool.ruff.lint.per-file-ignores]
"xonsh_parser/ply/*.py" = [
    "F401", # [*] `ast.Or` imported but unused
    "E501", # Line too long (98 > 88 characters)
    "E731", #  [*] Do not assign a `lambda` expression, use a `def`
    "B007", # Loop control variable `rule` not used within loop body
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
]
"xonsh_parser/xast.py" = [
    "F401", # [*] `ast.Add` imported but unused
]
"xonsh_parser/parsers/*.py" = [
    "E501", # Line too long (121 > 88 characters)
]
"xonsh_parser/*.py" = [
    "E741" # Ambiguous variable name: `l` -- todo: fix this
]
"*/tokenize.py" = [
    "F405", #
    "F821", # Undefined name `strstart`
    "F841", # [*] Local variable `strstart` is assigned to but never used
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
]


[tool.pytest.ini_options]
addopts = ""



[tool.pdm]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    ]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
profile = [
    "asv>=0.5.1",
    "virtualenv>=20.21.0",
    "pympler>=1.0.1",
    "guppy3>=3.1.2",
]
dev = [
    "flask>=3.0.3",
    "flask-wtf>=1.2.1",
    "ipython>=8.18.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov=xonsh_parser/ --cov-report=term-missing --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy xonsh_parser/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy xonsh_parser/",
]
bench = [
    "asv run --python=same --show-stderr", # quickly run benchmarks
]
bench-view = [
    "asv publish",
    "asv preview",
]
type = [
    "monkeytype run tests/sample.py",
    "monkeytype list-modules",
    'echo "monkeytype apply xonsh_parser"',
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
#version_file = "peg_parser/_version.py"

[project]
name = "xonsh-parser"
authors = [
    { name = "xonsh-parser", email = "jnoortheen@gmail.com" }
]
description = "Xonsh parser using PLY"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "mypy-extensions>=1.0.0",
]

[tool.setuptools.package-dir]
peg_parser = "peg_parser"
pegen = "pegen"

[project.urls]
Documentation = "https://jnoortheen.github.io/xonsh-parser/"
Source = "https://github.com/jnoortheen/xonsh-parser"

[tool.black]
# exclude extend to file "xonsh_parser/ply/yacc.py"
extend-exclude = ".+ply/yacc.py"

[tool.mypy]
# mypy ignore file "xonsh_parser/ply/yacc.py"
packages = "peg_parser"
ignore_missing_imports = true
warn_unused_configs = true
#warn_unused_ignores = true
#strict_optional = false
#warn_redundant_casts = true
exclude = [
    'peg_parser/tests',
]
