[tool.ruff]
line-length = 110
extend-exclude = ["tests/line-items", "tests/data", "pegen"]

[tool.ruff.lint]
extend-select = ["B", "I", "UP"]
fixable = ["ALL"]

# ruff ignore file "xonsh_parser/ply/yacc.py"
[tool.ruff.lint.per-file-ignores]
"*/tokenize.py" = [
    "F405", #
    "F821", # Undefined name `strstart`
    "F841", # [*] Local variable `strstart` is assigned to but never used
    "B904", # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
]


[tool.pytest.ini_options]
addopts = ""

[tool.pdm]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    ]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
profile = [
    "asv>=0.5.1",
    "virtualenv>=20.21.0",
    "pympler>=1.0.1",
    "guppy3>=3.1.2",
]
dev = [
    "flask>=3.0.3",
    "flask-wtf>=1.2.1",
    "ipython>=8.18.1",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov=xonsh_parser/ --cov-report=term-missing --cov-report=xml"
bench = [
    "asv run --python=same --show-stderr", # quickly run benchmarks
]
bench-view = [
    "asv publish",
    "asv preview",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
#version_file = "peg_parser/_version.py"

[project]
name = "xonsh-parser"
authors = [
    { name = "xonsh-parser", email = "jnoortheen@gmail.com" }
]
description = "Xonsh parser using PLY"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "mypy-extensions>=1.0.0",
]

[tool.setuptools.package-dir]
peg_parser = "peg_parser"
pegen = "pegen"

[project.urls]
Documentation = "https://jnoortheen.github.io/xonsh-parser/"
Source = "https://github.com/jnoortheen/xonsh-parser"

[tool.black]
# exclude extend to file "xonsh_parser/ply/yacc.py"
extend-exclude = ".+ply/yacc.py"

[tool.mypy]
# mypy ignore file "xonsh_parser/ply/yacc.py"
packages = "peg_parser"
ignore_missing_imports = true
warn_unused_configs = true
follow_imports = 'skip'
#warn_unused_ignores = true
#strict_optional = false
#warn_redundant_casts = true
exclude = [
    'tests',
    'peg_parser/parser/parser.py',
    'pegen\/build.py',
    'pegen\/grammar_parser.py',
]
