[package]
name = "rs-ply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_ply"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
serde_json = "*"
serde = { version = "1.0.215", features = ["derive"] }
log = "*"
