[package]
name = "xonsh_tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xonsh_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.21" , features = ["extension-module", "experimental-inspect", "nightly"]}
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
