[package]
name = "ser-parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ser_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
xtokens = { workspace = true }
ser_rs = { workspace = true }
